# datacollective-python

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
add_new_schema/: index.html
api/: index.html
docs/: add_new_schema.md  api.md  demo_download_and_load.py  demo_update_file_version.py  demo_upload.py  extend_schema_loading_logic.md  extend_the_schemas.md  index.md  library_development.md  release.md  schema_documentation.md  schema_parse.md  upload.md  upload_with_curl.md  upload_with_wrappers.md
docs/loaders/: asr.md  lm.md  oth.md  tts.md
extend_schema_loading_logic/: index.html
extend_the_schemas/: index.html
library_development/: index.html
loaders/asr/: index.html
loaders/oth/: index.html
loaders/tts/: index.html
release/: index.html
schema_documentation/: index.html
schema_parse/: index.html
scripts/: dev.py  fetch_slugs.py  generate_slugs.py  mdc-upload-common.sh  mdc-upload-file.sh  mdc-upload-init.sh  mdc-upload-submit.sh  mdc-upload-update.sh  mdc-upload-workflow.sh  submission.custom-license.json  submission.json
search/: search_index.json
src/datacollective/: __init__.py  api_utils.py  archive_utils.py  client.py  common_voice.py  dataset.py  datasets.py  download.py  errors.py  hf_utils.py  logging_utils.py  models.py  progress_bar.py  schema.py  slug_utils.py  submissions.py  upload.py  upload_utils.py
tests/: conftest.py  test_api_utils.py  test_archive_utils.py  test_client.py  test_dataset.py  test_datasets.py  test_download.py  test_e2e.py  test_hf_utils.py  test_load_dataset.py  test_logging_utils.py  test_models.py  test_schema.py  test_submissions.py  test_upload_state.py  test_upload_utils.py
tests/e2e/: conftest.py  helpers.py  (+4 more)
upload/: index.html
(+18 files in other folders)
