[build-system]
requires = ["uv_build >= 0.7.19, < 0.9.0"]
build-backend = "uv_build"

[project]
name = "datacollective"
version = "0.2.0"
dependencies = [
    "fox-progress-bar>=0.1.1",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
authors = [
    { name="Mozilla Data Collective", email="mozilladatacollective@mozillafoundation.org"},
]
description = "A Python package for interfacing with the Mozilla Data Collective's API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"
license-files = ["LICENSE*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "bump2version>=1.0.0",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/Mozilla-Data-Collective/datacollective-python"
Documentation = "https://Mozilla-Data-Collective.github.io/datacollective-python/"
Issues = "https://github.com/Mozilla-Data-Collective/datacollective-python/issues"

[project.scripts]
lint = "ruff:__main__"
typecheck = "mypy:__main__"

[tool.uv]
preview = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Bump2version configuration
[tool.bump2version]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bump2version.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bump2version.files]]
filename = "src/datacollective/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
